ui/single/task-priority-too-high.stderr
error[E0080]: evaluation of constant value failed
 --> $DIR/task-priority-too-high.rs:3:1
  |
3 | #[rtic::app(device = lm3s6965)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ attempt to subtract with overflow
